testData/src/error/JavaExample.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error;

class JavaExample {

  private String c = "";
  private String a = c;
  private String b = a;

  public void test() {
    System.out.println(1);
  }
}

